2002-08-20  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (HandleEnterNotify):
	fixed UngrabNotify returning focus to just unfocused window
	* fvwm/focus.h:
	added debug code

	* fvwm/style.c (merge_styles):
	(free_style_mask):
	(__simplify_style_list):
	fixed default style calculations

	* fvwm/events.c (HandleConfigureRequest):
	disabled debug output

	* fvwm/style.c (merge_styles):
	* fvwm/fvwm.h (window_style):
	new style member default_mask to allow two levels of defaults;
	fixes focus policy defaults
	* fvwm/style.h:
	rewrote many of the macros; changed all callers

	* fvwm/borders.c (RenderIntoPixmap):
	(DrawMultiPixmapTitlebar):
	(border_render_into_pixmap):
	(border_draw_multi_pixmap_titlebar):
	applied Suzanne Skinner's multi pixmap titles fix
	renamed functions and changed all callers

	* libs/FScreen.c (FScreenGetScrRect):
	(FindScreen):
	(FScreenGetScrId):
	new utility functions

	* fvwm/windowlist.c (CMD_WindowList):
	new option MaxLabelWidth for the WIndowList command based on patch by
	Maxim F. Ischenko
	new options NoLayer, ShowPage, ShowPageX, ShowPageY and SHowScreen to
	WindowList command.

	* fvwm/events.c (HandleConfigureRequest):
	removed debug code now that the EXPERIMENTAL_ANTI_RACE_CONDITION_CODE
	seems to work without problems

2002-08-19  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/style.c (merge_styles):
	fixed style defaults getting stuck to on once set

	* configure.in:
	fixed a number of non portable uses of the "test" command and unified
	the used syntax of all calls to reduce chance of copy-and-paste
	problems

2002-08-17  Mikhael Goikhman  <migo@homemail.com>

	* configure.in:
	* fvwm/fvwm.1.in:
	minor typos and improvements;
	better string quotings and detection of fribidi for autoconf-2.53

	* fvwm/Makefile.am:
	don't include *.in in EXTRA_DIST, they are auto-included


2002-08-17  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (HandleConfigureRequest):
	(HandlePropertyNotify):
	(is_resizing_event_pending):