@@ -1,5 +1,15 @@
 2002-08-20  Dominik Vogt  <dominik.vogt@gmx.de>
 
+	* fvwm/style.c (merge_styles):
+	fixed applying style updates immediately
+
+	* fvwm/geometry.c (constrain_size):
+	fixed font resizing of maximized windows
+
+	* fvwm/window_flags.h:
+	* fvwm/fvwm.h (has_new_wm_normal_hints):
+	new window flags
+
 	* fvwm/events.c (HandleEnterNotify):
 	fixed UngrabNotify returning focus to just unfocused window
 	* fvwm/focus.h:
